# practice-learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
3rd/: CMakeLists.txt  imgui.cmake
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
examples/: CMakeLists.txt
examples/01-hello-window/: CMakeLists.txt
examples/02-hello-trangle/: CMakeLists.txt  main-01.cpp  main-02.cpp
examples/03-shader/: CMakeLists.txt  main-01.cpp  main-02.cpp  main-03.cpp  main-04.cpp
examples/03-shader/shader/: shader-03.frag  shader-03.vert
examples/04-texture/: main-01.cpp  main-02.cpp  main-03.cpp  main-04.cpp  main-05.cpp
examples/04-texture/shader/: texture-05.vert
examples/05-transorm/: main-01.cpp  main-02.cpp  main-03.cpp
examples/05-transorm/shader/: transform-02.frag
examples/06-camera/: main-01.cpp  main-02.cpp  main-03.cpp  main-04.cpp
examples/06-camera/shader/: camera-01.frag  camera-01.vert
examples/07-lighting/: main-ambient.cpp  main-diffuse.cpp
examples/07-lighting/shader/: lamp.frag  lighting.frag
examples/08-material/: CMakeLists.txt  main-01.cpp  main-02.cpp
examples/08-material/shader/: 01-material.frag  01-material.vert  02-material-emission.frag  02-material-reverse-specular.frag  02-material.frag
examples/09-light-casters/: main-01.cpp
examples/09-light-casters/shader/: 01-material.frag
examples/10-model/: main-01.cpp
examples/10-model/shader/: 01-material.frag
examples/common/: CMakeLists.txt
examples/common/src/common/: camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h
shader/: shader-hello2.vertexshader  texture-hello.fragmentshader  texture-hello1.fragmentshader  transformations1.vertexshader
src/: camera.cpp  camera1.cpp  camera2.cpp  camera3.cpp  imgui-drawlist.cpp  imgui-hello.cpp  imgui-widgets-base.cpp  shader-hello2.cpp  shader-hello3.cpp  texture-hello.cpp  texture-hello1.cpp  texture-hello2.cpp  texture-hello3.cpp  texture-hello4.cpp  transformations.cpp  transformations1.cpp  transformations2.cpp  triangles-hello.cpp  triangles-hello1.cpp  triangles-hello2.cpp  triangles-hello3.cpp  triangles-hello4.cpp  window-hello.cpp  window-imgui-hello.cpp
src/common/: CMakeLists.txt  camera.cpp  camera.h  shader.cpp  shader.h  texture.cpp  texture.h
