add_custom_target(examples)
set_target_properties(examples PROPERTIES FOLDER "examples")

add_subdirectory(common)
add_subdirectory(01-hello-window)
add_subdirectory(02-hello-trangle)
add_subdirectory(03-shader)
add_subdirectory(04-texture)
add_subdirectory(05-transorm)
add_subdirectory(06-camera)
add_subdirectory(07-lighting)
add_subdirectory(08-material)